refatoração de CSS

--- a/index.html
+++ b/index.html
@@ -72,92 +72,93 @@
           </div>
       </section>
 
-      <h2 id="projects" class="projects-section">Projects</h2>
+      <h2 id="projects" class="sections-name
+      projects-section">Projects</h2>
       
       <section class="projects">
  
         <i id="go-back-arrow" class="far fa-arrow-alt-circle-left"></i>
 
-        <div class="slide project-one">
-        <div class="slider-one-image">
-          <img class="project-one-image" src="./src/images/project-one-img.png" alt="demonstração da tela inicial do projeto de buscar um usuário no GitHub">
+        <div class="slide project">
+        <div class="project-image-container">
+          <img class="project-image" src="./src/images/project-one-img.png" alt="demonstração da tela inicial do projeto de buscar um usuário no GitHub">
         </div>
 
-          <div class="project-one-info">
-          <h3 class="project-one-name">Search API GitHub</h3>
-          <p class="project-one-descrip">Este projeto foi desenvolvido com o objetivo de consolidar conhecimentos em JavaScript, consumo de APIs com Fetch e manipulação do DOM. A aplicação permite ao usuário buscar perfis na API do GitHub e, caso o usuário exista, exibe informações como: foto de perfil, nome, bio, login, número de seguidores e de seguidos, além de uma lista dos repositórios públicos com dados como watchers, estrelas, forks e linguagem utilizada. Também são exibidos os dez últimos eventos realizados pelo usuário em seus repositórios, quando disponíveis</p>
+          <div class="project-info">
+          <h3 class="project-name">Search API GitHub</h3>
+          <p class="project-description">Este projeto foi desenvolvido com o objetivo de consolidar conhecimentos em JavaScript, consumo de APIs com Fetch e manipulação do DOM. A aplicação permite ao usuário buscar perfis na API do GitHub e, caso o usuário exista, exibe informações como: foto de perfil, nome, bio, login, número de seguidores e de seguidos, além de uma lista dos repositórios públicos com dados como watchers, estrelas, forks e linguagem utilizada. Também são exibidos os dez últimos eventos realizados pelo usuário em seus repositórios, quando disponíveis</p>
 
-          <ul class="project-one-icons">
+          <ul class="project-icons">
             <li><i class="fab fa-html5"></i></li>
             <li><i class="fab fa-css3"></i></li>
             <li><i class="fab fa-js-square"></i></li>
           </ul>
 
-          <a href="https://bhn-1302.github.io/search-api-github/" target="_blank" class="project-one-link">Link do projeto</a>
+          <a href="https://bhn-1302.github.io/search-api-github/" target="_blank" class="project-link">Link do projeto</a>
           </div>
           </div>
 
-          <div class="slide project-two">
-        <div class="slider-two-image">
-          <img class="project-two-image" src="./src/images/project-two-img.png" alt="demonstração da tela inicial do projeto Gerador de Conselhos">
+          <div class="slide project">
+        <div class="project-image-container">
+          <img class="project-image" src="./src/images/project-two-img.png" alt="demonstração da tela inicial do projeto Gerador de Conselhos">
         </div>
 
-          <div class="project-two-info">
-          <h3 class="project-two-name">Gerador de Conselhos API</h3>
-          <p class="project-two-descrip">Este projeto é mais um projeto do Frontend Mentor e é responsável por gerar um conselho aleatório para o usuário. Para que os conselhos fossem gerados, foi utilizado a API "Advice Slip JSON API". Além disso, as palavras-chave async e await foram essenciais para a construção da lógica por trás do funcionamento deste projeto.</p>
+          <div class="project-info">
+          <h3 class="project-name">Gerador de Conselhos API</h3>
+          <p class="project-description">Este projeto é mais um projeto do Frontend Mentor e é responsável por gerar um conselho aleatório para o usuário. Para que os conselhos fossem gerados, foi utilizado a API "Advice Slip JSON API". Além disso, as palavras-chave async e await foram essenciais para a construção da lógica por trás do funcionamento deste projeto.</p>
 
-          <ul class="project-two-icons">
+          <ul class="project-icons">
             <li> <i class="fab fa-html5"></i></li>
             <li><i class="fab fa-css3"></i></li>
             <li><i class="fab fa-js-square"></i></li>
           </ul>
 
-          <a href="https://bhn-1302.github.io/gerador-de-conselhos/" target="_blank" class="project-two-link">Link do projeto</a>
+          <a href="https://bhn-1302.github.io/gerador-de-conselhos/" target="_blank" class="project-link">Link do projeto</a>
           </div>
           </div>
 
-          <div class="slide project-three">
-        <div class="slider-three-image">
-          <img class="project-three-image" src="./src/images/project-three-img.png" alt="demonstração da tela inicial do projeto Formulário de Cadastro com Geração de Ticket">
+          <div class="slide project">
+        <div class="project-image-container">
+          <img class="project-image" src="./src/images/project-three-img.png" alt="demonstração da tela inicial do projeto Formulário de Cadastro com Geração de Ticket">
         </div>
 
-          <div class="project-three-info">
-          <h3 class="project-three-name">Formulário de Cadastro com Geração de Ticket</h3>
-          <p class="project-three-descrip">Projeto desenvolvido como desafio front-end. A aplicação permite que o usuário envie uma imagem de avatar e preencha um formulário com nome, e-mail e usuário do GitHub. Ao finalizar, um ticket com essas informações é gerado automaticamente.</p>
+          <div class="project-info">
+          <h3 class="project-name">Formulário de Cadastro com Geração de Ticket</h3>
+          <p class="project-description">Projeto desenvolvido como desafio front-end. A aplicação permite que o usuário envie uma imagem de avatar e preencha um formulário com nome, e-mail e usuário do GitHub. Ao finalizar, um ticket com essas informações é gerado automaticamente.</p>
 
-          <ul class="project-three-icons">
+          <ul class="project-icons">
             <li> <i class="fab fa-html5"></i></li>
             <li><i class="fab fa-css3"></i></li>
             <li><i class="fab fa-js-square"></i></li>
           </ul>
 
-          <a href="https://bhn-1302.github.io/state-form-ticket-generator/" target="_blank" class="project-three-link">Link do projeto</a>
+          <a href="https://bhn-1302.github.io/state-form-ticket-generator/" target="_blank" class="project-link">Link do projeto</a>
           </div>
           </div>
 
-          <div class="slide project-four">
-        <div class="slider-four-image">
-          <img class="project-four-image" src="./src/images/project-four-img.png" alt="demonstração da tela inicial do projeto landing-page de uma agência fictícia">
+          <div class="slide project">
+        <div class="project-image-container">
+          <img class="project-image" src="./src/images/project-four-img.png" alt="demonstração da tela inicial do projeto landing-page de uma agência fictícia">
         </div>
 
-          <div class="project-four-info">
-          <h3 class="project-four-name">Agência XYZ</h3>
-          <p class="project-four-descrip">Esta landing page é o meu segundo projeto que fiz mas, desta vez, foi criada em aula com a orientação e guia do professor. O objetivo desse projeto foi praticar os conceitos aprendidos de display grid e de display flex, visando principalmente o grid para fixar melhor os seus conceitos não apenas em criações de desktop mas também para a responsividade no mobile.</p>
+          <div class="project-info">
+          <h3 class="project-name">Agência XYZ</h3>
+          <p class="project-description">Esta landing page é o meu segundo projeto que fiz mas, desta vez, foi criada em aula com a orientação e guia do professor. O objetivo desse projeto foi praticar os conceitos aprendidos de display grid e de display flex, visando principalmente o grid para fixar melhor os seus conceitos não apenas em criações de desktop mas também para a responsividade no mobile.</p>
 
-          <ul class="project-four-icons">
+          <ul class="project-icons">
             <li> <i class="fab fa-html5"></i></li>
             <li><i class="fab fa-css3"></i></li>
             <li><i class="fab fa-js-square"></i></li>
           </ul>
 
-          <a href="https://bhn-1302.github.io/landing-page-agencia/" target="_blank" class="project-four-link">Link do projeto</a>
+          <a href="https://bhn-1302.github.io/landing-page-agencia/" target="_blank" class="project-link">Link do projeto</a>
           </div>
           </div>
 
            <i id="forward-arrow" class="far fa-arrow-alt-circle-right"></i>
       </section>
 
-      <h2 id="skills" class="skills-section">Skills</h2>
+      <h2 id="skills" class="sections-name skills-section">Skills</h2>
 
       <section class="skills">
         <ul class="skills-icons">
@@ -169,7 +170,7 @@
         </ul>
       </section>
 
-      <h2 id="contact" class="contact-section">Contact</h2>
+      <h2 id="contact" class="sections-name contact-section">Contact</h2>
       <section>
         <p class="contact-message">Caso tenha se interessado pelo meu trabalho, entre em contato comigo preenchendo o formulário abaixo:</p>
         <form class="form" target="_blank" action="https://formsubmit.co/nascimenttobrenno1302@gmail.com" method="POST">
